force-app/main/default/objects/vlocity_ps__QueryBuilderDetail__c/vlocity_ps__QueryBuilderDetail__c.object-meta.xml
<CustomObject>
    <label>Query Builder Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Query Builder Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>