force-app/main/default/objects/vlocity_ps__QueryBuilderDetail__c/fields/vlocity_ps__Index__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Index__c</fullName>
    <label>Index</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>