force-app/main/default/objects/vlocity_ps__QueryBuilderDetail__c/fields/vlocity_ps__NullOrder__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__NullOrder__c</fullName>
    <description>FIRST/LAST FIRST default</description>
    <label>Null Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>