force-app/main/default/objects/vlocity_ps__QueryBuilderDetail__c/fields/vlocity_ps__Order__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Order__c</fullName>
    <label>Natural Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>