force-app/main/default/objects/vlocity_ps__QueryBuilderDetail__c/fields/vlocity_ps__QueryBuilderId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__QueryBuilderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Query Builder</label>
    <referenceTo>vlocity_ps__QueryBuilder__c</referenceTo>
    <relationshipLabel>Query Builder Detail</relationshipLabel>
    <relationshipName>QueryBuilderId</relationshipName>
    <type>Lookup</type>
</CustomField>